<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/tvAppLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvAppLabel"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:text="@string/amount_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etAmount"
        android:inputType="number"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvAmountLabel"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="18dp"
        android:layout_toRightOf="@+id/tvAmountLabel"
        android:background="@drawable/textlines"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/tvNumPersons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvPercentage"
        android:layout_below="@+id/etPercentage"
        android:layout_marginTop="28dp"
        android:text="@string/num_persons_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etPercentage"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvPercentage"
        android:layout_alignLeft="@+id/etAmount"
        android:layout_alignRight="@+id/tvAppLabel"
        android:background="@drawable/textlines"
        android:ems="10" />

    <EditText
        android:id="@+id/etNumPersons"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvNumPersons"
        android:layout_alignBottom="@+id/tvNumPersons"
        android:layout_alignLeft="@+id/etPercentage"
        android:layout_alignRight="@+id/etPercentage"
        android:background="@drawable/textlines"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/tvTipAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvNumPersons"
        android:layout_below="@+id/etNumPersons"
        android:layout_marginTop="38dp"
        android:text="@string/tip_amount_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvTotalPerPersonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTotalAmountLabel"
        android:layout_below="@+id/tvTotalAmount"
        android:layout_marginTop="22dp"
        android:text="@string/total_per_person_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvTotalAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTipAmountLabel"
        android:layout_below="@+id/tvTipAmount"
        android:layout_marginTop="18dp"
        android:text="@string/total_amount_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAmountLabel"
        android:layout_below="@+id/etAmount"
        android:layout_marginTop="28dp"
        android:text="@string/percentage_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvTotalPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etNumPersons"
        android:layout_alignTop="@+id/tvTotalPerPersonLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvTotalAmountLabel"
        android:layout_alignLeft="@+id/tvTotalPerPerson"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTotalAmount"
        android:layout_alignTop="@+id/tvTipAmountLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btExit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="onReset"
        android:text="@string/reset_button_label" />

    <Button
        android:id="@+id/btExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="onExit"
        android:text="@string/exit_button_label" />

</RelativeLayout>